FRW-7902 Enabled shallow clone for BuddyCI.

--- a/buddy.yml
+++ b/buddy.yml
@@ -8,6 +8,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'LARGE'
   actions:
       - action: 'Snyk Validation'
@@ -216,6 +217,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'LARGE'
   actions:
       - action: 'Build Project'
@@ -326,6 +328,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -365,6 +368,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -410,6 +414,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -449,6 +454,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -494,6 +500,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -532,6 +539,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -576,6 +584,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -614,6 +623,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -658,6 +668,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -697,6 +708,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -742,6 +754,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -781,6 +794,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -826,6 +840,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -864,6 +879,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -908,6 +924,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -946,6 +963,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -990,6 +1008,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Run tests'
@@ -1028,6 +1047,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Update Composer (Prefer Lowest)'
@@ -1076,6 +1096,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Update Composer (Prefer Lowest)'
@@ -1130,6 +1151,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Update Composer (Prefer Lowest)'
@@ -1177,6 +1199,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Update Composer (Prefer Lowest)'
@@ -1230,6 +1253,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Install Composer'
@@ -1287,6 +1311,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Install Composer'
@@ -1344,6 +1369,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
+  clone_depth: 1
   resources: 'NANO'
   actions:
       - action: 'Install Composer'
