FRW-6752 Updated product abstract URL on localized attribute saving. (#8768)
FRW-6752 Updated product abstract URL on localized attribute saving.

--- a/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
+++ b/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
@@ -113,19 +113,6 @@
                 ]
             },
             {
-                "name": "productAbstractUrls",
-                "isEditable": true,
-                "childDynamicEntityConfiguration": {
-                    "tableAlias": "urls"
-                },
-                "relationFieldMappings": [
-                    {
-                        "childFieldName": "fk_resource_product_abstract",
-                        "parentFieldName": "id_product_abstract"
-                    }
-                ]
-            },
-            {
                 "name": "productAbstractStores",
                 "isEditable": false,
                 "childDynamicEntityConfiguration": {
@@ -139,7 +126,7 @@
                 ]
             },
             {
-                "name": "productImageSets",
+                "name": "productAbstractImageSets",
                 "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-image-sets"
@@ -204,7 +191,7 @@
                 ]
             },
             {
-                "name": "productRelationProductAbstracts",
+                "name": "productAbstractsProductRelation",
                 "isEditable": false,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-relations-product-abstract"
@@ -217,7 +204,7 @@
                 ]
             },
             {
-                "name": "productLabelProductAbstracts",
+                "name": "productAbstractsProductLabel",
                 "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-label-product-abstracts"
@@ -757,20 +744,23 @@
                     "validation": { "isRequired": true }
                 },
                 {
-                    "fieldName": "fk_resource_product_abstract",
-                    "fieldVisibleName": "fk_resource_product_abstract",
-                    "isCreatable": true,
-                    "isEditable": true,
-                    "type": "integer",
-                    "validation": { "isRequired": false }
-                },
-                {
                     "fieldName": "url",
                     "fieldVisibleName": "url",
                     "isCreatable": true,
                     "isEditable": true,
                     "type": "string",
-                    "validation": { "isRequired": true }
+                    "validation": {
+                        "isRequired": true,
+                        "constraints": [{ "name": "url" }]
+                    }
+                },
+                {
+                    "fieldName": "fk_resource_product_set",
+                    "fieldVisibleName": "fk_resource_product_set",
+                    "isCreatable": true,
+                    "isEditable": true,
+                    "type": "integer",
+                    "validation": { "isRequired": false }
                 }
             ]
         }
@@ -1473,7 +1463,7 @@
         },
         "childRelations": [
             {
-                "name": "productImageSetToProductImages",
+                "name": "productImagesToProductImageSet",
                 "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-image-set-to-product-images"
