--- a/data/import/common/AT/AT.yml
+++ b/data/import/common/AT/AT.yml
@@ -44,6 +44,10 @@ actions:
       source: data/import/common/AT/price_product_merchant_relationship.csv
     - data_entity: price-product-offer
       source: data/import/common/AT/price_product_offer.csv
+    - data_entity: merchant-commission-amount
+      source: data/import/common/AT/marketplace/merchant_commission_amount.csv
+    - data_entity: merchant-commission-store
+      source: data/import/common/AT/marketplace/merchant_commission_store.csv
     # Payment methods
     - data_entity: payment-method-store
       source: data/import/common/AT/payment_method_store.csv
