--- a/data/import/common/DE/DE.yml
+++ b/data/import/common/DE/DE.yml
@@ -42,6 +42,10 @@ actions:
       source: data/import/common/DE/price_product_merchant_relationship.csv
     - data_entity: price-product-offer
       source: data/import/common/DE/price_product_offer.csv
+    - data_entity: merchant-commission-amount
+      source: data/import/common/DE/marketplace/merchant_commission_amount.csv
+    - data_entity: merchant-commission-store
+      source: data/import/common/DE/marketplace/merchant_commission_store.csv
     # Payment methods
     - data_entity: payment-method-store
       source: data/import/common/DE/payment_method_store.csv
