--- a/data/import/common/marketplace_import_config_US.yml
+++ b/data/import/common/marketplace_import_config_US.yml
@@ -36,6 +36,12 @@ actions:
       source: data/import/common/common/marketplace/payment_method.csv
     - data_entity: merchant-product-approval-status-default
       source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
+    - data_entity: merchant-commission-group
+      source: data/import/common/common/marketplace/merchant_commission_group.csv
+    - data_entity: merchant-commission
+      source: data/import/common/common/marketplace/merchant_commission.csv
+    - data_entity: merchant-commission-merchant
+      source: data/import/common/common/marketplace/merchant_commission_merchant.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/US/merchant_store.csv
@@ -45,3 +51,7 @@ actions:
       source: data/import/common/US/marketplace/warehouse_store.csv
     - data_entity: payment-method-store
       source: data/import/common/US/payment_method_store.csv
+    - data_entity: merchant-commission-amount
+      source: data/import/common/US/marketplace/merchant_commission_amount.csv
+    - data_entity: merchant-commission-store
+      source: data/import/common/US/marketplace/merchant_commission_store.csv
