--- a/data/import/production/full_EU.yml
+++ b/data/import/production/full_EU.yml
@@ -348,6 +348,12 @@ actions:
       source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
     - data_entity: product-offer-shipment-type
       source: data/import/common/common/product_offer_shipment_type.csv
+    - data_entity: merchant-commission-group
+      source: data/import/common/common/marketplace/merchant_commission_group.csv
+    - data_entity: merchant-commission
+      source: data/import/common/common/marketplace/merchant_commission.csv
+    - data_entity: merchant-commission-merchant
+      source: data/import/common/common/marketplace/merchant_commission_merchant.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/DE/merchant_store.csv
@@ -365,6 +371,14 @@ actions:
       source: data/import/common/common/marketplace/product_stock.csv
     - data_entity: product-offer-stock
       source: data/import/common/common/marketplace/product_offer_stock.csv
+    - data_entity: merchant-commission-amount
+      source: data/import/common/DE/marketplace/merchant_commission_amount.csv
+    - data_entity: merchant-commission-amount
+      source: data/import/common/AT/marketplace/merchant_commission_amount.csv
+    - data_entity: merchant-commission-store
+      source: data/import/common/DE/marketplace/merchant_commission_store.csv
+    - data_entity: merchant-commission-store
+      source: data/import/common/AT/marketplace/merchant_commission_store.csv
 
     #9. Click&Collect import
     - data_entity: service-point
