--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "symfony/debug": "^4.4.9",
         "symfony/error-handler": "^5.0.9 || ^6.4.0",
         "symfony/event-dispatcher": "^5.1.0 || ^6.4.0",
-        "symfony/filesystem": "^5.2.1 || ^6.4.0",
+        "symfony/filesystem": "^5.2.1 || 6.4.0",
         "symfony/finder": "^5.3.0 || ^6.4.0",
         "symfony/form": "^5.2.0 || ^6.4.0",
         "symfony/http-client": "^5.0.9 || ^6.4.0",
