CC-33312: Fixed docker file.

--- a/composer.json
+++ b/composer.json
@@ -152,7 +152,7 @@
         "spryker-sdk/async-api": "^0.3.1",
         "spryker/profiler": "dev-master",
         "spryker/commerce-k6-performance-tests": "dev-master",
-        "spryker/cypress-tests": "dev-master"
+        "spryker/cypress-tests": "dev-bugfix/cc-33312-dynamic-store-docker"
     },
     "autoload": {
         "psr-4": {
