--- a/tests/PyzTest/Zed/AclEntity/codeception.yml
+++ b/tests/PyzTest/Zed/AclEntity/codeception.yml
@@ -36,3 +36,5 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Zed\Category\Helper\CategoryHelper
                 - \SprykerTest\Shared\MerchantCategory\Helper\MerchantCategoryHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
