--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,6 +188,8 @@ jobs:
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
+            SPRYKER_CURRENT_REGION: EU
+            SPRYKER_DYNAMIC_STORE_MODE: true
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.2
             TRAVIS: 1
 
@@ -204,9 +206,9 @@ jobs:
                   git clone https://github.com/spryker/docker-sdk.git ./docker
                   docker/sdk boot deploy.ci.api.mariadb.yml
                   docker/sdk up -t
-                  SPRYKER_CURRENT_REGION=EU docker/sdk testing codecept fixtures
-                  SPRYKER_CURRENT_REGION=EU docker/sdk testing console queue:worker:start --stop-when-empty
-                  SPRYKER_CURRENT_REGION=EU docker/sdk testing codecept run -c codeception.api.yml
+                  docker/sdk testing codecept fixtures
+                  docker/sdk testing console queue:worker:start --stop-when-empty
+                  docker/sdk testing codecept run -c codeception.api.yml
 
     php-82-mariadb-acceptance-alpine-dynamic-store-off:
         name: "PHP 8.2 / MariaDB / Acceptance / Alpine / Dynamic Store OFF"
